k8s/andrew-customer.yaml
# andrew-customer DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: andrew-customer-deployment
  labels:
    tier: andrew-customer
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      tier: andrew-customer
  template:
    metadata:
      labels:
        tier: andrew-customer
    spec:
      containers:
        - name: andrew-customer
          image: antoineleguillou/andrew-customer:06-04-2024.4
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 350m
              memory: 450Mi
            requests:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 3000
      restartPolicy: Always
---
# andrew-customer SERVICES
apiVersion: v1
kind: Service
metadata:
  name: andrew-customer-service
spec:
  selector:
    tier: andrew-customer
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: public
